@@ -25,10 +25,15 @@
 #include "treeview.h"
 #include "musiclibraryproxymodel.h"
 #include "icon.h"
+#include "localize.h"
+#include "actioncollection.h"
+#include <QtCore/QTimer>
 #include <QtGui/QAction>
+#include <QtCore/QDebug>
 
 SyncCollectionWidget::SyncCollectionWidget(QWidget *parent, const QString &title, const QString &action, bool showCovers)
     : QWidget(parent)
+    , searchTimer(0)
 {
     setupUi(this);
     groupBox->setTitle(title);
@@ -41,12 +46,25 @@ SyncCollectionWidget::SyncCollectionWidget(QWidget *parent, const QString &title
     proxy->setSourceModel(model);
     tree->setModel(proxy);
     tree->setPageDefaults();
+    search->setText(QString());
+    search->setPlaceholderText(i18n("Search"));
     connect(tree, SIGNAL(itemsSelected(bool)), button, SLOT(setEnabled(bool)));
     connect(button, SIGNAL(clicked()), SLOT(copySongs()));
+    connect(search, SIGNAL(returnPressed()), this, SLOT(delaySearchItems()));
+    connect(search, SIGNAL(textChanged(const QString)), this, SLOT(delaySearchItems()));
 
     QAction *act=new QAction(action, this);
     connect(act, SIGNAL(triggered(bool)), SLOT(copySongs()));
     tree->addAction(act);
+
+    QAction *expand=ActionCollection::get()->action("expandall");
+    QAction *collapse=ActionCollection::get()->action("collapseall");
+    if (expand && collapse) {
+        addAction(expand);
+        addAction(collapse);
+        connect(expand, SIGNAL(triggered(bool)), this, SLOT(expandAll()));
+        connect(collapse, SIGNAL(triggered(bool)), this, SLOT(collapseAll()));
+    }
 }
 
 SyncCollectionWidget::~SyncCollectionWidget()
@@ -67,4 +85,46 @@ void SyncCollectionWidget::copySongs()
     }
 
     emit copy(model->songs(mapped));
+}
+
+void SyncCollectionWidget::delaySearchItems()
+{
+    if (search->text().trimmed().isEmpty()) {
+        if (searchTimer) {
+            searchTimer->stop();
+        }
+        searchItems();
+    } else {
+        if (!searchTimer) {
+            searchTimer=new QTimer(this);
+            searchTimer->setSingleShot(true);
+            connect(searchTimer, SIGNAL(timeout()), SLOT(searchItems()));
+        }
+        searchTimer->start(500);
+    }
+}
+
+void SyncCollectionWidget::searchItems()
+{
+    QString text=search->text().trimmed();
+    proxy->update(text);
+    if (proxy->enabled() && !text.isEmpty()) {
+        tree->expandAll();
+    }
+}
+
+void SyncCollectionWidget::expandAll()
+{
+    QWidget *f=QApplication::focusWidget();
+    if (f && qobject_cast<QTreeView *>(f)) {
+        static_cast<QTreeView *>(f)->expandAll();
+    }
+}
+
+void SyncCollectionWidget::collapseAll()
+{
+    QWidget *f=QApplication::focusWidget();
+    if (f && qobject_cast<QTreeView *>(f)) {
+        static_cast<QTreeView *>(f)->collapseAll();
+    }
 }
