@@ -106,6 +106,7 @@
     to re-reading all songs from mpd/device.
 59. If window is minimized to system tray when Cantata is terminated, then
     restore to this state when restarted.
+60. Add search line-edits, and expand/collapse all, to sync dialog.
 
 0.8.3.1
 -------
